--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,44 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+body {
+  background-color: #dddddd;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
 a {
   font-weight: 500;
-  color: #646cff;
+  color: rgb(0, 0, 0);
   text-decoration: inherit;
 }
 
 a:hover {
-  color: #535bf2;
+  opacity: 50%;
+}
+
+.navbar {
+  background-color: rgba(175, 175, 175, 0.781);
+  padding: 20px 20px;
+}
+
+.nav-menu {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+nav .active {
+  color: #3c9251;
+  text-shadow: 1px 1px rgba(30, 61, 28, 0.89);
+  font-size: 18.5px;
 }
